# nutri_ally

./: .gitignore  docker-compose.yml  otel-collector-config.yaml  package-lock.json  package.json  pyproject.toml
backend/: api.key  database.db  database.py  play.ipynb  security.py
backend/tutorials/: httponly.py  items.py  main.py
frontend/: .dockerignore  Dockerfile  entrypoint.sh  next.config.mjs  package-lock.json  package.json  registry.js  seed.js  tsconfig.json
frontend/prisma/migrations/20250108094136_add_food_model/: migration.sql
frontend/prisma/migrations/20250109020742_map_to_snake_case/: migration.sql
frontend/prisma/migrations/20250120045054_added_more_fields_to_user_model/: migration.sql
frontend/prisma/migrations/20250213051540_added_saved_meals_table/: migration.sql
frontend/prisma/migrations/20250221073346_added_meal_macros_column/: migration.sql
frontend/prisma/migrations/20250221082026_added_default_0_for_nutrition_info/: migration.sql
frontend/prisma/schema/: food.prisma  meals.prisma  schema.prisma
frontend/src/: middleware.js
frontend/src/app/: auth.js  globals.css  layout.js  page.js  page.module.css
frontend/src/app/auth/: page.js  page.module.css
frontend/src/app/dashboard/: client.js  page.js
frontend/src/app/gallery/: client.js  layout.js  loading.js  page.js
frontend/src/app/mealscart/: client.js  page.js
frontend/src/app/profile/: client.js  client.module.css  page.js
frontend/src/components/context/: BasketContext.js  BasketProvider.tsx
frontend/src/components/modal/: Modal.js
notebooks/rag/: rag_1.ipynb
(+36 files in other folders)
